# XEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/Runtime/: CMakeLists.txt
Source/Runtime/ApplicationCore/: Application.cpp  Application.h  ApplicationInput.cpp  ApplicationInput.h
Source/Runtime/Core/: MainInit.cpp  MainInit.h  PixelFormat.h  ResourceCreateDataInterface.h
Source/Runtime/D3D12RHI/: D3D12AbstractDevice.cpp  D3D12AbstractDevice.h  D3D12Adapter.cpp  D3D12Adapter.h  D3D12Allocation.cpp  D3D12Allocation.h  D3D12Buffer.cpp  D3D12Buffer.h  D3D12CommandList.cpp  D3D12CommandList.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Common.h  D3D12Context.cpp  D3D12Context.h  D3D12DescriptorArray.cpp  D3D12DescriptorArray.h  D3D12OnlineDescArray.cpp  D3D12OnlineDescArray.h  D3D12OnlineDescArrayManager.cpp  D3D12OnlineDescArrayManager.h  D3D12PassStateManager.cpp  D3D12PassStateManager.h  D3D12PhysicDevice.cpp  D3D12PhysicDevice.h  D3D12PipelineLibrary.h  D3D12PipelineLibraryWindows.cpp  D3D12PipelineState.h  D3D12PlatformRHI.cpp  D3D12PlatformRHI.h  D3D12Resource.cpp  D3D12Resource.h  D3D12Rootsignature.cpp  D3D12Rootsignature.h  D3D12Shader.cpp  D3D12Shader.h  D3D12State.cpp  D3D12State.h  D3D12Texture.cpp  D3D12Texture.h  (+5 more)
Source/Runtime/DataStruct/: XRefCountPtr.h
Source/Runtime/Engine/: ResourcecConverter.cpp  ResourcecConverter.h  SceneView.cpp  SceneView.h  UIBackend.cpp  UIBackend.h
Source/Runtime/HAL/: FileManagerGeneric.cpp  FileManagerGeneric.h  Mch.h  PlatformTypes.h
Source/Runtime/RHI/: PipelineStateCache.cpp  PipelineStateCache.h  PlatformRHI.cpp  PlatformRHI.h  RHI.cpp  RHI.h  RHICommandList.h  RHIContext.h  RHIDefines.h  RHIResource.h  RHIStaticStates.h  RHITransitionInfo.h
Source/Runtime/ReflectionGen/: Object.gen.cpp  Texture.gen.cpp
Source/Runtime/Render/: BasePassRendering.cpp  BasePassRendering.h  ConeTracing.cpp  DeferredShadingRenderer.cpp  DeferredShadingRenderer.h  HZBPass.cpp  LightPass.cpp  MaterialShader.h  MeshMaterialShader.h  MeshPassProcessor.h  PostProcessToneMapping.cpp  PostprocessAA.cpp  PreDepthPassGPUCulling.cpp  PreDepthPassGPUCulling.h  Presentpass.cpp  RayTracingBasicShaders.cpp  RayTracingBasicShaders.h  RayTracingInstanceBufferUtil.cpp  RayTracingInstanceBufferUtil.h  SVOInjectLight.cpp  SceneRenderTagrget.cpp  SceneRenderTagrget.h  SceneRendering.h  ShadowMap_Old.cpp  ShadowMap_Old.h  ShadowMaskGenerate.cpp  SkyAtmosPhere.cpp  SkyAtmosPhere.h  SpaseVoxelOctreeBuild.cpp  UIRenderer.cpp  VirtualShadowMap.cpp  VirtualShadowMap.h  VirtualShadowMapArray.cpp  VirtualShadowMapArray.h  VoxelizationScene.cpp  VoxelizationScene.h
Source/Runtime/RenderCore/: CommonRenderRresource.cpp  CommonRenderRresource.h  GlobalShader.cpp  GlobalShader.h  RenderResource.cpp  RenderResource.h  Shader.cpp  Shader.h  ShaderCore.h  ShaderParameter.cpp  ShaderParameter.h  VertexFactory.cpp  VertexFactory.h
Source/Runtime/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Source/Runtime/VulkanRHI/: VulaknHack.h  VulkanBarriers.cpp  VulkanBarriers.h  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommands.cpp  VulkanCommon.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSets.cpp  VulkanDescriptorSets.h  VulkanDevice.cpp  VulkanDevice.h  VulkanExtensions.cpp  (+34 more)
(+129 files in other folders)
